Fri Jan 23 11:49:45 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* NEWS: added an entry for REXML.

	* lib/rexml/document.rb: fixed typo.

Fri Jan 23 11:49:45 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/rexml/document.rb: limit entity expansion.  Thanks, Luka
	  Treiber, Mitja Kolsek, and Michael Koziarski.  backported from
	  trunk r19033, r19317, r19318.

	* lib/rexml/entity.rb: ditto.

	* test/rexml/test_document.rb: ditto.

Thu Jan 22 15:19:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (marshal_load): arg.data is no longer a VALUE but a
	  st_table, and freed in load_ensure.  pointed out by pegacorn.
	  [ruby-dev:37008]

Thu Jan 22 15:19:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_mark_set): new function to mark keys.

	* marshal.c (struct dump_arg, struct load_arg): added wrappers to mark
	  data entries.  backport from trunk r13527,r13528,r13961,r16533.
	  [ruby-dev:36082]

Wed Jan 21 11:12:55 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (filetime_to_timeval): new function, split from
	  gettimeofday().

	* win32/win32.c (gettimeofday): use above function.

	* win32/win32.c (filetime_to_unixtime): ditto. [ruby-dev:36135]

Wed Jan 21 11:12:55 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (gettimeofday): tv_usec is usec, not msec.
	  [ruby-dev:36094]

Wed Jan 21 11:12:55 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (gettimeofday): calc tv_sec and tv_usec from system
	  time by myself. [ruby-dev:36084]

Wed Jan 21 11:12:55 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (gettimeofday): shouldn't use mktime(2) because it's
	  buggy about handling summer time.
	  reported by Yoshikawa <yoshixool AT gmail.com> at [ruby-dev:36071]

Tue Jan 20 12:23:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/scanf.rb (Scanf::FormatSpecifier#initialize): %i should accept
	  single digit decimal.  [ruby-core:18355]

Mon Jan 19 18:25:28 2009  Tanaka Akira  <akr@fsij.org>
