@@ -1087,7 +1087,7 @@ class Vector
     
     other.compare_by(@elements)
   end
-  alias eqn? ==
+  alias eql? ==
   
   #
   # For internal use.
